Fix Input Bar Clipping

--- a/style.css
+++ b/style.css
@@ -604,10 +604,10 @@ ins.rc-ins {
 #form_sheld.recast-input-active::before {
     content: '';
     position: absolute;
-    top: 0;
+    top: -5px;
     left: 0;
     right: 0;
-    height: 6px;
+    height: 5px;
     background: linear-gradient(
         90deg,
         #4a90e2 0%,
@@ -627,7 +627,7 @@ ins.rc-ins {
 #form_sheld.recast-input-active::after {
     content: '';
     position: absolute;
-    top: 0;
+    top: -5px;
     left: 0;
     right: 0;
     height: 60px;
